--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -287,6 +287,23 @@ tw-sidebar [role=button] {
   align-self: flex-end;
   margin-right: 3rem;
   transform: rotate(-2deg);
+}
+.clean-passage .line {
+  font-size: 1.2rem;         /* Bigger text */
+  line-height: 1.6;
+  max-width: 85%;
+  margin: 1rem auto;
+  text-align: left;
+  align-self: center;        /* Align center uniformly */
+}
+
+.clean-passage .inter-text-image {
+  width: 35%;                /* Smaller images */
+  margin: 1.5rem 0;
+  border-radius: 0;
+  transform: none !important; /* Remove rotation */
+  align-self: center;
+  display: block;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -363,27 +380,34 @@ The bedroom that could fit the water tank inside of it maybe,
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="" position="600,975" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="" position="600,975" size="100,100">&lt;div class=&quot;big-brackets clean-passage&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
     &lt;p class=&quot;line line-1&quot;&gt;[[A ring-shaped mosquito bite on your finger greets you in the morning]].&lt;/p&gt;
-    
+
     &lt;img src=&quot;images/cross.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
     &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
 
-    &lt;p class=&quot;line line-3&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
+    &lt;p class=&quot;line line-3&quot;&gt;The radio hums in the background, a voice talking about the weather in a language you barely understand.&lt;/p&gt;
 
     &lt;img src=&quot;images/sky.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
-    &lt;p class=&quot;line line-4&quot;&gt;Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric?&lt;/p&gt;
+    &lt;p class=&quot;line line-4&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
 
-    &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
+    &lt;p class=&quot;line line-5&quot;&gt;The light on your arms is warm. You can smell the eucalyptus in the air, and the detergent in the fabric.&lt;/p&gt;
+
+    &lt;img src=&quot;images/plant.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+
+    &lt;p class=&quot;line line-6&quot;&gt;Folding the clothes feels euphoric.&lt;/p&gt;
+
+    &lt;p class=&quot;line line-7&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile.&lt;/p&gt;
 
     &lt;img src=&quot;images/mum.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
-    &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
+    &lt;p class=&quot;line line-8&quot;&gt;The tile trailing off, somewhere you’re supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="Untitled Passage" tags="" position="300,900" size="100,100">&lt;tw-passage&gt;
+&lt;/div&gt;
+</tw-passagedata><tw-passagedata pid="7" name="Untitled Passage" tags="" position="300,900" size="100,100">&lt;tw-passage&gt;
   &lt;div class=&quot;grid-container&quot;&gt;
     &lt;!-- Example Image 1 --&gt;
     &lt;div class=&quot;grid-item image-item&quot;&gt;
