--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -287,6 +287,9 @@ tw-sidebar [role=button] {
   align-self: flex-end;
   margin-right: 3rem;
   transform: rotate(-2deg);
+}
+tw-story[tags~="background2"] {
+  background: url('images/sky.jpg') center center / cover no-repeat fixed;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -449,7 +452,20 @@ The bedroom that could fit the water tank inside of it maybe,
     &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
     &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="A ring-shaped mosquito bite on your finger greets you in the morning" tags="" position="600,1100" size="100,100"></tw-passagedata></tw-storydata>
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="A ring-shaped mosquito bite on your finger greets you in the morning" tags="background2" position="600,1100" size="100,100">On the first night there is vomit.
+
+Before the vomit she talks at you in the language you have pretended to understand since the morning at the train station where they picked you up and tossed your bags into the back. 
+
+The couch is made of wooden pellets, covered in thin foam. Foam bubbles up and coats your tongue. 
+
+Before talk there is sugo and melone and formaggio sliced thinly and a bottle of homemade red wine. 
+
+You decline. You retract. You are drunk. 
+
+A woman working in the bar corrects your sentences. You repeat after her. Swirl the words around your mouth. Chew on them, swallow, 
+but they come rising back up. 
+
+[[Bile tainted with track changes]]</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1225" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
