--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -313,16 +313,16 @@ You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name=
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,725" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
 The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,850" size="100,100">&lt;p&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges’.&lt;/p&gt;
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,850" size="100,100">&lt;p&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/p&gt;
 
 |fade&gt;[ ]
 
-(after: 6s)[
+(after: 4s)[
   (replace: ?fade)[&lt;div class=&quot;slow-fade-screen&quot;&gt;&lt;/div&gt;]
 ]
 
 (after: 10s)[
-  (goto: &quot;bed&quot;)
+  (goto: &quot;Next Passage&quot;)
 ]</tw-passagedata><tw-passagedata pid="5" name="Brackets with rotation" tags="" position="300,700" size="100,100">&lt;!-- Brackets with Rotation --&gt;
 &lt;div class=&quot;big-brackets&quot;&gt;
   ( )
@@ -437,11 +437,11 @@ The bedroom that could fit the water tank inside of it maybe,
     &lt;/div&gt;
   &lt;/div&gt;
 ]
-(after: 2s)[
+(after: 4s)[
   (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
 ]
 
-(after: 7s)[
+(after: 8s)[
   (replace: ?fadeOut)[]
   (goto: &quot;bed&quot;)
 ]
