--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -290,6 +290,34 @@ tw-sidebar [role=button] {
 }
 tw-story[tags~="background2"] {
   background: url('images/sky.jpg') center center / cover no-repeat fixed;
+}
+
+.falling-text {
+  position: absolute;
+  animation: fall 6s linear forwards;
+  opacity: 0;
+  white-space: nowrap;
+  font-size: 1em;
+  z-index: 10;
+}
+
+@keyframes fall {
+  0% {
+    top: -5%;
+    left: calc(10% + 80% * var(--random-x));
+    opacity: 1;
+  }
+  100% {
+    top: 100%;
+    left: calc(10% + 80% * var(--random-x));
+    opacity: 0;
+  }
+}
+
+#falling-container {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -322,7 +350,7 @@ The bedroom that could fit the water tank inside of it maybe,
 ]
 
 (after: 10s)[
-  (goto: &quot;Next Passage&quot;)
+  (goto: &quot;arrive in calabria&quot;)
 ]</tw-passagedata><tw-passagedata pid="5" name="Brackets with rotation" tags="" position="300,700" size="100,100">&lt;!-- Brackets with Rotation --&gt;
 &lt;div class=&quot;big-brackets&quot;&gt;
   ( )
@@ -367,9 +395,9 @@ The bedroom that could fit the water tank inside of it maybe,
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="" position="600,975" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+</tw-passagedata><tw-passagedata pid="6" name="next passage" tags="" position="600,1225" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
-    &lt;p class=&quot;line line-1&quot;&gt;[[A ring-shaped mosquito bite on your finger greets you in the morning]].&lt;/p&gt;
+    &lt;p class=&quot;line line-1&quot;&gt;[[a ring shaped mosquito bite greets you in the morning]].&lt;/p&gt;
 
     &lt;img src=&quot;images/cross.jpg&quot; class=&quot;inter-text-image&quot;&gt;
 
@@ -454,20 +482,31 @@ The bedroom that could fit the water tank inside of it maybe,
     &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
     &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="A ring-shaped mosquito bite on your finger greets you in the morning" tags="background2" position="600,1100" size="100,100">On the first night there is vomit.
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">(set: $lines to [
+  &quot;On the first night there is vomit.&quot;,
+  &quot;Before the vomit she talks at you in the language you have pretended to understand...&quot;,
+  &quot;The couch is made of wooden pellets, covered in thin foam.&quot;,
+  &quot;Before talk there is sugo and melone and formaggio...&quot;,
+  &quot;You decline. You retract. You are drunk.&quot;,
+  &quot;A woman working in the bar corrects your sentences.&quot;,
+  &quot;You repeat after her. Swirl the words around your mouth...&quot;,
+  &quot;Chew on them, swallow, but they come rising back up.&quot;,
+  &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
+])
 
-Before the vomit she talks at you in the language you have pretended to understand since the morning at the train station where they picked you up and tossed your bags into the back. 
+&lt;div id=&quot;falling-container&quot;&gt;
+  (for: each _line, ...$lines)[
+    (set: _x to (random: 0, 100) / 100)
+    (set: _delay to (random: 0, 4))
+    (display: &quot;falling line&quot; _line _x _delay)
+  ]
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
+(set: _x to _args[2])
+(set: _delay to _args[3])
 
-The couch is made of wooden pellets, covered in thin foam. Foam bubbles up and coats your tongue. 
-
-Before talk there is sugo and melone and formaggio sliced thinly and a bottle of homemade red wine. 
-
-You decline. You retract. You are drunk. 
-
-A woman working in the bar corrects your sentences. You repeat after her. Swirl the words around your mouth. Chew on them, swallow, 
-but they come rising back up. 
-
-[[Bile tainted with track changes]]</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1225" size="100,100"></tw-passagedata></tw-storydata>
+&lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
+  _text
+&lt;/span&gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
