--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -294,26 +294,29 @@ tw-story[tags~="background2"] {
 
 #falling-container {
   position: relative;
-  height: 100vh;
-  overflow: hidden;
+  width: 100%;
+  height: 100vh; /* Full viewport height to ensure text has room to fall */
+  overflow: hidden; /* Hide any text that falls outside the container */
 }
+
 .falling-text {
   position: absolute;
-  animation: fall 6s linear forwards;
-  opacity: 0;
-  white-space: nowrap;
-  font-size: 1em;
-  z-index: 10;
+  font-family: "Arial", sans-serif; /* Choose your desired font */
+  font-size: 20px; /* You can adjust the size of the text */
+  color: #000; /* Set the text color */
+  white-space: nowrap; /* Prevent text from wrapping */
+  animation: fall linear infinite; /* Apply the fall animation */
+  opacity: 0; /* Start with invisible text */
 }
 
 @keyframes fall {
   0% {
-    top: -5%;
-    opacity: 1;
+    transform: translateY(-100px); /* Start above the screen */
+    opacity: 0; /* Make it invisible at the start */
   }
   100% {
-    top: 100%;
-    opacity: 0;
+    transform: translateY(100vh); /* Move to the bottom of the viewport */
+    opacity: 1; /* Fade in as it falls */
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
@@ -479,7 +482,8 @@ The bedroom that could fit the water tank inside of it maybe,
     &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
     &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">(set: $lines to [
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">&lt;!-- Define your lines of text --&gt;
+(set: $lines to [
   &quot;On the first night there is vomit.&quot;,
   &quot;Before the vomit she talks at you in the language you have pretended to understand...&quot;,
   &quot;The couch is made of wooden pellets, covered in thin foam.&quot;,
@@ -491,15 +495,16 @@ The bedroom that could fit the water tank inside of it maybe,
   &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
 ])
 
-&lt;div id=&quot;falling-container&quot;&gt;
-  (for: each _line, ...$lines)[
-    &lt;!-- Set the variables --&gt;
-    (set: _x to (random: 0, 100) / 100) &lt;!-- Random X position --&gt;
-    (set: _delay to (random: 0, 4)) &lt;!-- Random delay --&gt;
+&lt;!-- Precompute positions and delays --&gt;
+(set: $randomX to (for: each _line, ...$lines)[(random: 0, 100) / 100]) &lt;!-- Generate random X positions --&gt;
+(set: $randomDelays to (for: each _line, ...$lines)[(random: 0, 4)]) &lt;!-- Generate random delays --&gt;
 
-    &lt;!-- Now insert a falling-text span using the calculated values --&gt;
-    &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-      _line
+&lt;!-- Loop through each line and create the falling text --&gt;
+&lt;div id=&quot;falling-container&quot;&gt;
+  (for: each _line, _index, ...$lines)[
+    &lt;!-- Create a span for each line with its corresponding position and delay --&gt;
+    &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _randomX[_index]); animation-delay: _randomDelays[_index]s;&quot;&gt;
+      (print: _line) &lt;!-- Display the current line of text --&gt;
     &lt;/span&gt;
   ]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
