--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -295,28 +295,28 @@ tw-story[tags~="background2"] {
 #falling-container {
   position: relative;
   width: 100%;
-  height: 100vh; /* Full viewport height to ensure text has room to fall */
-  overflow: hidden; /* Hide any text that falls outside the container */
+  height: 100vh; /* Full viewport height */
+  overflow: hidden; /* Hide text that moves outside the container */
 }
 
 .falling-text {
   position: absolute;
-  font-family: "Arial", sans-serif; /* Choose your desired font */
-  font-size: 20px; /* You can adjust the size of the text */
-  color: #000; /* Set the text color */
-  white-space: nowrap; /* Prevent text from wrapping */
-  animation: fall linear infinite; /* Apply the fall animation */
-  opacity: 0; /* Start with invisible text */
+  font-family: "Arial", sans-serif;
+  font-size: 20px;
+  color: #000;
+  white-space: nowrap;
+  opacity: 0;
+  animation: fall linear infinite;
 }
 
 @keyframes fall {
   0% {
-    transform: translateY(-100px); /* Start above the screen */
-    opacity: 0; /* Make it invisible at the start */
+    transform: translateY(-100px);
+    opacity: 0;
   }
   100% {
-    transform: translateY(100vh); /* Move to the bottom of the viewport */
-    opacity: 1; /* Fade in as it falls */
+    transform: translateY(100vh);
+    opacity: 1;
   }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
@@ -495,16 +495,16 @@ The bedroom that could fit the water tank inside of it maybe,
   &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
 ])
 
-&lt;!-- Precompute positions and delays --&gt;
-(set: $randomX to (for: each _line, ...$lines)[(random: 0, 100) / 100]) &lt;!-- Generate random X positions --&gt;
-(set: $randomDelays to (for: each _line, ...$lines)[(random: 0, 4)]) &lt;!-- Generate random delays --&gt;
-
-&lt;!-- Loop through each line and create the falling text --&gt;
+&lt;!-- Container for the falling text --&gt;
 &lt;div id=&quot;falling-container&quot;&gt;
-  (for: each _line, _index, ...$lines)[
-    &lt;!-- Create a span for each line with its corresponding position and delay --&gt;
-    &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _randomX[_index]); animation-delay: _randomDelays[_index]s;&quot;&gt;
-      (print: _line) &lt;!-- Display the current line of text --&gt;
+  (for: each _line, ...$lines)[
+    &lt;!-- Inside the loop, generate random values for position and delay --&gt;
+    (set: _x to (random: 0, 100) / 100) &lt;!-- Random X position --&gt;
+    (set: _delay to (random: 0, 4)) &lt;!-- Random delay --&gt;
+
+    &lt;!-- Insert a span for each line --&gt;
+    &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
+      _line
     &lt;/span&gt;
   ]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
