--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -295,29 +295,18 @@ tw-story[tags~="background2"] {
 #falling-container {
   position: relative;
   width: 100%;
-  height: 100vh; /* Full viewport height */
-  overflow: hidden; /* Hide text that moves outside the container */
+  height: 100vh; /* Make sure it takes up the full height */
 }
 
 .falling-text {
-  position: absolute;
-  font-family: "Arial", sans-serif;
-  font-size: 20px;
-  color: #000;
-  white-space: nowrap;
-  opacity: 0;
-  animation: fall linear infinite;
+  font-size: 20px; /* Increase font size to make sure text is visible */
+  color: black;
+  animation: fall 5s infinite linear;
 }
 
 @keyframes fall {
-  0% {
-    transform: translateY(-100px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(100vh);
-    opacity: 1;
-  }
+  0% { top: 0%; }
+  100% { top: 100%; }
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
@@ -495,67 +484,23 @@ The bedroom that could fit the water tank inside of it maybe,
   &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
 ])
 
+&lt;!-- Precompute positions and delays --&gt;
+(set: $randomX to (for: each _line, ...$lines)[(random: 0, 100) / 100]) &lt;!-- Generate random X positions --&gt;
+(set: $randomDelays to (for: each _line, ...$lines)[(random: 0, 4)]) &lt;!-- Generate random delays --&gt;
+
 &lt;!-- Container for the falling text --&gt;
 &lt;div id=&quot;falling-container&quot;&gt;
-  &lt;!-- Line 1 --&gt;
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[0])
-  &lt;/span&gt;
+  &lt;!-- Loop through each line and create the falling text --&gt;
+  (for: each _line, _index, ...$lines)[
+    (set: _x to $randomX[_index])
+    (set: _delay to $randomDelays[_index])
 
-  &lt;!-- Line 2 --&gt;
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[1])
-  &lt;/span&gt;
-
-  &lt;!-- Line 3 --&gt;
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[2])
-  &lt;/span&gt;
-
-  &lt;!-- Continue this for each line --&gt;
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[3])
-  &lt;/span&gt;
-
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[4])
-  &lt;/span&gt;
-
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[5])
-  &lt;/span&gt;
-
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[6])
-  &lt;/span&gt;
-
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[7])
-  &lt;/span&gt;
-
-  (set: _x to (random: 0, 100) / 100)
-  (set: _delay to (random: 0, 4))
-  &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
-    (print: $lines[8])
-  &lt;/span&gt;
-&lt;/div&gt;
-</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
+    &lt;!-- Create a span for each line with its corresponding position and delay --&gt;
+    &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
+      (print: _line)
+    &lt;/span&gt;
+  ]
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
 (set: _x to _args[2])
 (set: _delay to _args[3])
 
